Modernizacja streamu w GraphQLExceptionHandler oraz poprawka importu