@@ -10,7 +10,6 @@ import org.springframework.stereotype.Component;
 import reactor.core.publisher.Mono;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class GraphQLExceptionHandler implements DataFetcherExceptionResolver {
@@ -26,7 +25,7 @@ public class GraphQLExceptionHandler implements DataFetcherExceptionResolver {
                     .map(violation -> GraphqlErrorBuilder.newError(env)
                             .message("Błąd walidacji: " + violation.getMessage())
                             .build())
-                    .collect(Collectors.toList());
+                    .toList(); // POPRAWIONE: Zamiast .collect(Collectors.toList())
 
             return Mono.just(errors);
         }
